updated MQ FILES